# Contact-Manager

./: CMakeLists.txt  CMakePresets.json  main.cpp  utilities.ixx  vcpkg.json
